--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
   <title>Simple 2-Tier App</title>
 </head>
 <body>
-  <h1>Hello from the frontend!</h1>
+  <h1>Hello from the frontend! AK</h1>
 </body>
 </html>
 
